@@ -7,6 +7,7 @@ lilv (9999) unstable;
   * Fix crash when lv2info is run with an invalid URI argument
   * Gracefully handle failure to save plugin state and print error message
   * Reduce memory usage (per node)
+  * Add lv2bench utility
 
  -- David Robillard <d@drobilla.net>
 
